[metadata]
name = seca
version = 0.0.1
author = Spencer Hallyburton
author_email = spencer@shally.dev
description = Security analysis of autonomous vehicles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roshambo919/lib-seca.git
project_urls = 
    Bug Tracker = https://github.com/roshambo919/lib-seca/issues
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = seca
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
